<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">QUIZ</string>
    <string name="your_name">Your name</string>
    <string name="get_started">GET STARTED</string>
    <string name="choose_contact">CHOOSE CONTACT</string>
    <string name="the_name_of_the_player_is">The name of the player is:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_result">Quiz result</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="quiz_app">Quiz App</string>
    <string name="header_title">Menu options</string>
    <string name="header_text">Enjoy the quiz</string>
    <string name="home">Home</string>
    <string name="quiz_time">Quiz time</string>
    <string name="profile">Profile</string>
    <string name="question_list">List of questions</string>
    <string name="new_question">New question</string>
    <string name="enjoy_the_quiz">Enjoy the quiz app, where you can:</string>
    <string name="test_your_skills">TEST YOUR SKILLS</string>
    <string name="read_questions">READ QUESTIONS</string>
    <string name="create_question">CREATE QUESTION</string>
    <string name="details">DETAILS</string>
    <string name="delete">DELETE</string>
    <string name="player_name">Player Name:</string>
    <string name="high_score">High score:</string>
    <string name="make_your_own_question">Make your own question!</string>
</resources>