<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/miHome"
            android:checked="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/miQuizTime"
            android:icon="@drawable/quiz_time"
            android:title="@string/quiz_time" />
        <item
            android:id="@+id/miProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/miListOfQuestions"
            android:icon="@drawable/ic_list"
            android:title="@string/question_list" />
        <item
            android:id="@+id/miNewQuestion"
            android:icon="@drawable/new_question"
            android:title="@string/new_question" />
    </group>
</menu>